# bdlabs2

./: data.py  main.py
lab1/: README.md  kpi_website.xml  parsed_rozetka.xhtml  part_1.py  part_2.py  pyproject.toml  rozetka_website.xml  test.xml  transform.xsl
lab2/: README.md  app.py  lab2.paw  pyproject.toml
lab2/domain/: db.py  exceptions.py  message.py  pub_sub_listeners.py  redis_structures.py  user.py
