[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["Dizzzmas <yankovskyi.dmytro736@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
