[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["flain1"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
redis = "^3.5.3"
flask_smorest = "^0.29.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
